# mini-net

./: README.md  pyproject.toml
src/net/: __init__.py  factory.py  logging.py
src/net/application/: __init__.py  client.py  router.py  server.py
src/net/application/chat/: __init__.py  codec.py  file.py  message_type.py  system.py  text.py
src/net/application/ui/: __init__.py  protocol.py
src/net/application/ui/impl/: __init__.py  console.py  gui.py
src/net/base/: __init__.py
src/net/model/: __init__.py  address.py
src/net/stack/: __init__.py  factory.py
src/net/stack/link/: __init__.py  protocol.py
src/net/stack/link/impl/: __init__.py  simple.py
src/net/stack/network/: __init__.py  protocol.py
src/net/stack/network/impl/: __init__.py  host.py  router.py
src/net/stack/physical/: __init__.py  protocol.py
src/net/stack/physical/impl/: __init__.py  udp_simulated.py
src/net/stack/transport/: __init__.py  protocol.py
src/net/stack/transport/impl/: __init__.py  reliable_connection.py  reliable_transport.py
