[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a-mini-net"
dynamic = ["version"]
description = "Simulação de pilha de protocolos de rede (Física, Enlace, Rede, Transporte e Aplicação) sobre UDP, implementada como projeto integrador da disciplina de Redes de Computadores."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

authors = [
    { name = "Andre Koraleski", email = "andre.andre2@discente.ufg.br" },
    { name = "Henrick Souza", email = "henrick.henrick@discente.ufg.br"}
]

dependencies = []

[project.scripts]
router = "net.application.router:main"
server = "net.application.server:main"
alice  = "net.application.client:main_alice"
bob    = "net.application.client:main_bob"

# --- Hatch  ---
[tool.hatch.version]
path = "src/net/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/net"]
artifacts = ["src/net/py.typed"]
